# rust-primer

./: Cargo.toml  readme.md
src/: arrays.rs  main.rs  print.rs  strings.rs  tuples.rs  types.rs  vars.rs
