[package]
name = "rust-primer"
version = "0.1.0"
authors = ["metrophobe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# After running "cargo init" in the command prompt or terminal...
# you get this .toml file which is the equivalent of a 'package.json' file in web solutions ...
# 'better toml' can highlight syntax for you in this file.... 

[dependencies]
